# skills

./: .gitignore  AGENTS.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
overrides/: main.html
overrides/partials/page-content/: after-content.html
skills/: ACKNOWLEDGEMENTS.md  CNAME  README.md  llms.txt
skills/fast-rust/: SKILL.md
skills/friendly-python/: SKILL.md
skills/friendly-python/references/: api-design.md  application-architecture.md  error-handling.md  kill-ai-slop.md  oop-design.md  portability-pythonic.md  python-conventions.md  review-checklist.md  testing.md
skills/mod-go/: SKILL.md
skills/mod-go/agents/: openai.yaml
skills/mod-go/references/: module-boundary.md  orchestration.md  review-checklist.md  state-flow.md
skills/modular-go/references/: orchestration.md  review-checklist.md  state-flow.md
skills/solid-go/: SKILL.md
skills/solid-go/agents/: openai.yaml
skills/solid-go/references/: module-boundary.md  orchestration.md  state-flow.md
