[project]
name = "psiace-skills"
version = "0.1.0"
description = "A personal collection of agent skills reflecting preferred engineering practices."
readme = "README.md"
requires-python = ">=3.10,<4.0"

[dependency-groups]
docs = [
    "mkdocs>=1.4.2",
    "mkdocs-terminal>=4.7.0",
    "pymdown-extensions>=10.0.0",
]
